infra/kubernetes/base/web-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-page
  labels:
    app.kubernetes.io/name: web-page
    app.kubernetes.io/component: web-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web-page
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
